Manage roles and permissions of users (API).
